# CS2-Project

./: AVLTree.h  AVLTree.tpp  Authentication.cpp  Authentication.h  CMakeLists.txt  User.cpp  User.h  global.cpp  global.h  main.cpp  post.h  recording.conf  users.txt
UI/: auth.html  friends.html  home.html  newpost.html  notifications.html  timeline.html
